--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ color: #fff;
 }
 
 
-/* ..........////Food category///........... */
+/* ..........////Choose///........... */
 
 #choose {
   padding: 5rem 0 10rem 0;
